# miniGIS

./: .gitignore  Dockerfile  README.md  build.sh  dev_build.sh  docker-compose.yaml  prod_build.sh  pyproject.toml
.github/workflows/: my-CI.yml  my-pipline.yml
.kube/: config
client/: README.md  babel.config.js  frontend_file_structure.html  index.html  jest.config.js  package-lock.json  package.json  webpack.config.js
client/src/: App.tsx  ErrorPage.tsx  Navbar.tsx  Router.tsx  WorkbenchStack.tsx  axiosInstance.tsx  frontend_file_structure.html  index.js  index.tsx  link.tsx
client/src/app/: App.tsx  Toasts.tsx  socket.ts  store.ts
client/src/main/: Main.tsx
client/src/map/: Map.tsx  Sidebar.tsx  Toasts.tsx  interfacesTypeScript.ts  query.tsx  rv.tsx
client/src/navbar/: Navbar.tsx  StackIcon.tsx  Tooltip.tsx  TooltipTemplate.html
client/src/profile/: Authorization.tsx  Profile.tsx  Registration.tsx  YandexAuthorization.tsx  (+3 more)
dev_env/: 01_migrations_storage_class.yml  02_migrations_minigis_pv.yml  03_migrations_minigis_pvc.yml  Dockerfile  dev_build.sh  dev_minigis_deploy.yml  pyproject.toml
kubernetes/: README.md
kubernetes/minigis-web/: 01_deployment_minigis.yml  01_service.yml  02_ingress.yml  02_service.yml  03_deployment_minigis.yml  03_ingress.yml  03_minigis_pv.yml  03_storage_class.yml  04_minigis_pv.yml  04_minigis_pvc.yml  05_deployment_minigis.yml  05_minigis_pvc.yml  06_deployment_minigis.yml  README.md
kubernetes/postgres/: 01_postgres_configmap.yml  02_postgres_pv.yml  02_storage_class.yml  03_postgres_pv.yml  03_postgres_pvc.yml  04_postgres_pvc.yml  05_postgres_deployment.yml  05_postgres_service.yml  README.md
server/: README.md  Types.py  alembic.ini  auth.py  backend_file_structure.html  database.py  main.py  models.py  sio.py  test_main.py
server/alembic/: env.py
server/alembic_copy/: env.py
server/calculation/: Automation.py  Classifier.py  EarthEngine.py  FileHandler.py  YandexDiskHadler.py  test_EarthEngine.py
server/routers/: main.py
server/schema/: Mutations.py  Queries.py
tasks/: Dockerfile  README.md  dev_build.sh  monitoring.py  pyproject.toml
(+188 files in other folders)
