[tool.poetry]
name = "minigis"
version = "0.1.0"
description = ""
authors = ["ArthurGolubev <gg.arthur.go@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = {extras = ["all"], version = "^0.85.1"}
strawberry-graphql = {extras = ["fastapi"], version = "^0.137.0"}
earthengine-api = "^0.1.328"
loguru = "^0.6.0"
sentinelhub = "^3.8.0"
google-cloud-storage = "^2.5.0"
pandas = "^1.5.1"
google-cloud-bigquery = "^3.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
